tests/urmoac/errors/net_issues/edge_length_0_multiple_log/options.urmoac
--write.net-errors net_errors.txt
